# STELLA

./: .dockerignore  .gitignore  API_KEYS_GUIDE.md  Dockerfile  Knowledge_base.py  MANIFEST.in  MEMORY_ARCHITECTURE_UPGRADE.md  README.md  README_Mem0_Integration.md  STELLA_Framework_Introduction_CN.md  STELLA_Framework_Introduction_EN.md  STELLA_Test_Results_Summary.md  STELLA_UPDATE_SUMMARY.md  memory_manager.py  predefined_tools.py  pyproject.toml  requirements.txt  search_usage_guide.md  skill_manager.py  skill_retriever.py  skill_schema.py  skill_store.py  skill_summarizer.py  small_logo_b64.txt  start_stella_basic.py  start_stella_web.py  stella_base64.tmp  stella_config.json  stella_core.py  stella_ui_english.py  tool_governance.py
.github/workflows/: publish.yml
Tool_Creation_Benchmark/: 47_benchmark_tasks.yaml  README.md  evaluation_criteria.md  task_with_answer.csv
Tool_Creation_Benchmark/hard_set/: run_benchmark.py  run_openrouter_batch.py  summarize_eval.py  task_ids.csv
Tool_Creation_Benchmark/simple_set/: config_example.json  mcq.csv  run_benchmark.py  score_results.py  tasks.csv
cases/: nk_aml_negative_regulators.py  strictosidine_synthase_round2.py
cases/output/: nk_aml_negative_regulators_example.csv  strictosidine_synthase_round2.csv
docker/: README.md
docker_files/: Dockerfile.complete  Dockerfile.final  README-Docker.md  docker-compose.yml  env.example
new_tools/: README.md  __init__.py  biomedical_literature_analyzer.py  biosecurity_alignment_guard.py  biosecurity_tool.py  database_tools.py  demo_usage.py  enhanced_nk_gene_analyzer.py  enzyme_tools.py  esm2_embedder.py  evaluate_response.py  kegg_pathway_search.py  ligand_based_screening_tool.py  literature_tools.py  llm.py  molecular_docking_tool.py  nk_gene_analyzer.py  protein_seq_featurizer.py  protocol_evaluator.py  query_pubmed_tool.py  requirements.txt  test_database_tools.py  test_enzyme_tools.py  test_evaluate_response_comprehensive.py  test_literature_tools.py  test_pubmed_search.py  test_tool_selection.py  uniprot_query.py  virtual_screening_tools.py
prompts/: Stella_prompt.yaml  Stella_prompt_bioml.yaml  Stella_prompt_modified.yaml  Stella_prompt_simplified.yaml  code_agent.yaml  structured_code_agent.yaml  toolcalling_agent.yaml
stella/: __init__.py
(+24 files in other folders)
